--- a/sobel.ipynb
+++ b/sobel.ipynb
@@ -44,7 +44,7 @@
     "             [1,2,1]])\n",
     "t1=list(np.shape(x))\n",
     "y=np.zeros((t1[0]-2,t1[1]-2))\n",
-    "for i in range(t1[0]-2):\n", //method for performing calculations
+    "for i in range(t1[0]-2): //method for performing calculations\n", 
     "    for j in range(t1[1]-2):\n",
     "        s=x[i:(i+3),j:(j+3)]\n",
     "        s1=np.sum(s*f1)\n",
