--- a/threshold.ipynb
+++ b/threshold.ipynb
@@ -82,6 +82,7 @@
     "            y[i][j]=8*x[i][j]\n",
     "plt.imshow(y,cmap=\"gray\")\n",
     "plt.show()"
+    "print("Done Image Processing")"
    ]
   },
   {
