--- a/sobel.ipynb
+++ b/sobel.ipynb
@@ -44,7 +44,7 @@
     "             [1,2,1]])\n",
     "t1=list(np.shape(x))\n",
     "y=np.zeros((t1[0]-2,t1[1]-2))\n",
-    "for i in range(t1[0]-2): //method for performing calculations\n", 
+    "for i in range(t1[0]-2):\n",
     "    for j in range(t1[1]-2):\n",
     "        s=x[i:(i+3),j:(j+3)]\n",
     "        s1=np.sum(s*f1)\n",
@@ -52,7 +52,6 @@
     "        y[i][j]=math.sqrt((s1*s1)+(s2*s2))\n",
     "plt.imshow(y,cmap=\"gray\")\n",
     "plt.show()"
-    "print('Image displaying work Fine !!!')"
    ]
   },
   {
